# ai_weather_art

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  app.py  docker-compose.yml  pyproject.toml
docs/: current-progress.md  implementation-plan.md  project-description.md
static/css/: style.css
static/js/: app.js  renderer.js
templates/: index.html
tests/: conftest.py  test_agent.py  test_geocoding.py  test_routes.py  test_scene_schema.py
tests/integration/: test_agent.py  test_geocoding.py  test_weather.py  test_weather_agent.py
tests/unit/: conftest.py  test_agent.py  test_routes.py  test_scene_schema.py  test_weather.py
weather_art/: agent.py  config.py  geocoding.py  routes.py  scene_schema.py  weather.py  weather_agent.py
